# HEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  GenerateProjects.bat  HEngine.sln  LICENSE  README.md  Win-GenProjects.bat  premake5.lua
Engine/: CMakeLists.txt
Engine/Assets/Config/: imgui.ini
Engine/Assets/Models/: Box.fbx  Box.mtl
Engine/Assets/Models/dancing-stormtrooper/source/: silly_dancing.fbx
Engine/Assets/Scenes/: Basic3D.he  Example.he  Gun.he  Physics2DTest.he  Physics3DTest.he
Engine/Assets/Shaders/: Renderer2D_Circle.glsl
Engine/Config/: imgui.ini
Engine/Shaders/: BasePBR.glsl  BasePBR_anim.glsl  Common.glsl  Cube.glsl  FlatColor.glsl  NormalOutline.glsl  NormalOutline_anim.glsl  Renderer2D_Circle.glsl  Renderer2D_Line.glsl  Renderer2D_Quad.glsl  SkyBox.glsl
Engine/Shaders/IBL/: background.glsl  brdf.glsl  equirectangularToCubemap.glsl  irradiance.glsl  pbr.glsl  pbr_anim.glsl  pbr_static.glsl  prefilter.glsl
Engine/Shaders/PostProcessing/: Cartoon.glsl  FxaaConsole.glsl  GaussianBlur.glsl  GrayScale.glsl  Outline.glsl
Engine/Shaders/Shadow/: CSM_Depth.glsl  Debug_Depth.glsl
Engine/Source/: CMakeLists.txt
Engine/Source/Editor/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  HEngineEditorApp.cpp  imgui.ini
Engine/Source/Editor/IconManager/: CMakeLists.txt  IconManager.cpp  IconManager.h
Engine/Source/Editor/ImGuiWrapper/: CMakeLists.txt  ImGuiWrapper.cpp  ImGuiWrapper.h
Engine/Source/Editor/Panels/: CMakeLists.txt  ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneSettingsPanel.cpp  SceneSettingsPanel.h
Engine/Source/Editor/RawRenderTest/: CMakeLists.txt  RawLayer.cpp  RawLayer.h
Engine/Source/Runtime/: CMakeLists.txt  HEngine.h  hepch.cpp  hepch.h
Engine/Source/Runtime/Animation/: CMakeLists.txt  animation.cpp  animation.h  animator.h  animdata.h  assimp_glm_helpers.h  bone.h  model_animation.h
Engine/Source/Runtime/Camera/: CMakeLists.txt  EditorCamera.cpp  EditorCamera.h  SceneCamera.cpp  SceneCamera.h
Engine/Source/Runtime/Core/: Application.cpp  Application.h  Assert.h  Base.h  CMakeLists.txt  Input.h  Layer.h  LayerStack.h  Log.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.h
Engine/Source/Runtime/Core/AppFramework/: Application.cpp  Application.h  CMakeLists.txt
Engine/Source/Runtime/Core/Base/: Assert.h  Base.h  CMakeLists.txt  PublicSingleton.h
Engine/Source/Runtime/Core/Log/: CMakeLists.txt  Log.cpp  Log.h
Engine/Source/Runtime/Core/Math/: CMakeLists.txt  Math.hpp
Engine/Source/Runtime/Debug/: CMakeLists.txt  Instrumentor.h
Engine/Source/Runtime/EcsFramework/: CMakeLists.txt
Engine/Source/Runtime/EcsFramework/Component/: CMakeLists.txt  ComponentBase.h  ComponentConcept.h  ComponentGroup.h
Engine/Source/Runtime/EcsFramework/Entity/: CMakeLists.txt  Entity.cpp  Entity.h  ScriptableEntity.cpp  ScriptableEntity.h
Engine/Source/Runtime/EcsFramework/Level/: CMakeLists.txt  Level.cpp  Level.h
Engine/Source/Runtime/EcsFramework/Registry/: CMakeLists.txt  Registry.h
Engine/Source/Runtime/EcsFramework/Serializer/: CMakeLists.txt  SceneSerializer.cpp  SceneSerializer.h
Engine/Source/Runtime/EcsFramework/System/: CMakeLists.txt  System.h  SystemGroup.h
Engine/Source/Runtime/Events/: ApplicationEvent.h  CMakeLists.txt  Event.h  KeyEvent.h  MouseEvent.h
Engine/Source/Runtime/HEngine/Core/: Application.h  Input.h  KeyCodes.h  LayerStack.h  Timestep.h  UUID.h
Engine/Source/Runtime/HEngine/Events/: ApplicationEvent.h  Event.h
Engine/Source/Runtime/HEngine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Engine/Source/Runtime/HEngine/Math/: Math.cpp  Math.h
Engine/Source/Runtime/HEngine/Renderer/: Buffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCameraController.cpp  RendererAPI.cpp  Shader.cpp  SubTexture2D.h
Engine/Source/Runtime/HEngine/Scene/: Components.h  Entity.cpp  Scene.cpp  ScriptableEntity.h
Engine/Source/Runtime/ImGui/: CMakeLists.txt  ImGuiLayer.cpp  ImGuiLayer.h
Engine/Source/Runtime/Input/: CMakeLists.txt  Input.h
Engine/Source/Runtime/Launch/: CMakeLists.txt  Launch.cpp
Engine/Source/Runtime/Mesh/: CMakeLists.txt  Mesh.cpp  Mesh.h  SubMesh.cpp  SubMesh.h
Engine/Source/Runtime/Platform/: CMakeLists.txt
Engine/Source/Runtime/Platform/DirectX11/: CMakeLists.txt  DXTrace.cpp  DXTrace.h  Dx11Context.cpp  Dx11Context.h  Dx11ContextWrapper.h  Dx11ImGuiLayer.cpp  Dx11ImGuiLayer.h  Dx11RendererAPI.cpp  Dx11RendererAPI.h  RenderStates.cpp  RenderStates.h
Engine/Source/Runtime/Platform/OpenGL/: CMakeLists.txt  NativeOpenGLShader.cpp  NativeOpenGLShader.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLImGuiLayer.cpp  OpenGLImGuiLayer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLPostProcessing.cpp  OpenGLPostProcessing.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  (+2 more)
Engine/Source/Runtime/Renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  PostProcessing.cpp  PostProcessing.h  RenderCommand.cpp  RenderCommand.h  RenderCommandQueue.cpp  RenderCommandQueue.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  (+13 more)
Engine/Source/Runtime/Resource/: CMakeLists.txt
Engine/Source/Runtime/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Engine/Source/Runtime/Utils/: CMakeLists.txt
Engine/Source/Scripts/: MoveRight.py  test.py
(+229 files in other folders)
