add_subdirectory(Audio)
add_subdirectory(Basic)
add_subdirectory(Camera)
add_subdirectory(Light)
add_subdirectory(Mesh)
add_subdirectory(Physics)
add_subdirectory(Script)
add_subdirectory(Shape)
add_subdirectory(Transform)

RUNTIME_ADD_SOURCE(
    ComponentBase.h ComponentConcept.h ComponentGroup.h 
)